k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: franchise-backend
  labels:
    app: franchise-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: franchise-backend
  template:
    metadata:
      labels:
        app: franchise-backend
    spec:
      containers:
        - name: franchise-backend
          image: franchise-backend:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
