k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: franchise-backend-service
spec:
  type: ClusterIP
  selector:
    app: franchise-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
